Under Linux use BLKGETSIZE64 to get the device size, now, and only when that fails fall back to HDIO_GETGEO. This hopefully fixes #3122, as I suspect HDIO_GETGEO returned an incorrect size.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32674 a95241bf-73f2-0310-859d-f6bbb57e9c96